# tungsten-oxide

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  CPP_PORT_PLAN.md  README.md  UBIQUITOUS_LANGUAGE.md  editor.html  index.html  package-lock.json  package.json  track-core.js  track.html
assets/track/: manifest.json
cpp/: CMakeLists.txt
cpp/core/: CMakeLists.txt
cpp/core/include/: Ship.hpp  Simulation.hpp  Track.hpp  TrackCore.hpp  Vec3.hpp
cpp/core/src/: Simulation.cpp  Track.cpp  TrackCore.cpp  Vec3.cpp
cpp/core/tests/: parity_main.cpp
cpp/include/: Ship.hpp  Simulation.hpp  Track.hpp  TrackCore.hpp  Vec3.hpp
cpp/tests/: parity_main.cpp
cpp/willpower/: CMakeLists.txt
cpp/willpower/willpower.common/: CMakeLists.txt
cpp/willpower/willpower.common/include/willpower/common/: AccelerationGrid.h  BatchRenderable.h  BezierSpline.h  BoundingBox.h  BoundingCircle.h  BoundingConvexPolygon.h  CachedDynamicAccelerationGrid.h  CachedStaticAccelerationGrid.h  CentripetalCatmullRomSpline.h  CentripetalCatmullRomSplineLooping.h  CubicBSpline.h  CubicBSplineLooping.h  DateTime.h  DynamicAccelerationGrid.h  Exceptions.h  ExtendedAccelerationGrid.h  ExtentsCalculator.h  Globals.h  IndexedTriangleBatchRenderable.h  LineHit.h  Logger.h  MathsUtils.h  Platform.h  Renderable.h  SplinePath.h  StackWalker.h  StringUtils.h  Timer.h  TriangleBatchRenderable.h  TriangleIntersection.h  TriangleStripBatchRenderable.h  Triangulation.h  Vector2.h  WillpowerWalker.h  polypartition.h
cpp/willpower/willpower.common/src/: AccelerationGrid.cpp  BatchRenderable.cpp  BezierSpline.cpp  BoundingBox.cpp  BoundingCircle.cpp  BoundingConvexPolygon.cpp  CachedDynamicAccelerationGrid.cpp  CachedStaticAccelerationGrid.cpp  CentripetalCatmullRomSpline.cpp  CentripetalCatmullRomSplineLooping.cpp  CubicBSpline.cpp  CubicBSplineLooping.cpp  DateTime.cpp  DynamicAccelerationGrid.cpp  ExtentsCalculator.cpp  IndexedTriangleBatchRenderable.cpp  LineHit.cpp  Logger.cpp  MathsUtils.cpp  Renderable.cpp  SplinePath.cpp  StackWalker.cpp  StringUtils.cpp  Timer.cpp  TriangleBatchRenderable.cpp  TriangleStripBatchRenderable.cpp  Triangulation.cpp  Vector2.cpp  WillpowerWalker.cpp  polypartition.cpp
cpp/willpower/willpower.geometry/: CMakeLists.txt
cpp/willpower/willpower.geometry/include/willpower/geometry/: BezierOffsetter.h  ConvexOffsetter.h  CsgUtils.h  DirectedEdge.h  DirectedEdgeLoop.h  Edge.h  EdgeFilter.h  Exception.h  Filter.h  Mesh.h  MeshCallbacks.h  MeshHelpers.h  MeshOperationOptions.h  MeshOperationResults.h  MeshOperations.h  MeshPropertyCollection.h  MeshQuery.h  MeshUtils.h  MeshValidator.h  Offsetter.h  OperationStatus.h  Platform.h  Polygon.h  PolygonFilter.h  TypeConverters.h  Types.h  UserAttributes.h  Vertex.h  VertexFilter.h
cpp/willpower/willpower.geometry/src/: BezierOffsetter.cpp  ConvexOffsetter.cpp  CsgUtils.cpp  DirectedEdgeLoop.cpp  Edge.cpp  EdgeFilter.cpp  Filter.cpp  Mesh.cpp  MeshHelpers.cpp  MeshOperations.cpp  MeshQuery.cpp  MeshUtils.cpp  MeshValidator.cpp  Offsetter.cpp  Polygon.cpp  PolygonFilter.cpp  TypeConverters.cpp  Vertex.cpp  VertexFilter.cpp  clipper.cpp
js/: editor.js  ship-grid.js  track-bake.js  track-game.js  track-mesh.js  track-physics.js  usd-export.js  vec3.js
test/: parity.test.js  ship-grid.test.js  track-core.test.js  track-mesh.test.js  track-physics.test.js  usd-export.test.js  vec3.test.js
test/parity/: autopilot.js  gen-traces.mjs  loadcore.js  state.js  trace.js  tracks.js
test/traces/: boost-circuit.json  manifest.json  open-curve.json  recovery-run.json  starter-circle.json
tools/: browser-smoke.mjs  parity.mjs
